# connect_four

./: .gitignore  CMakeLists.txt  Makefile  README.md  alphabeta.h  audio.cpp  audio.h  connect4.h  connect_four.cpp  framerateadjuster.cpp  framerateadjuster.h  frameratecontroller.cpp  frameratecontroller.h  game.cpp  game.h  gameview.cpp  gameview.h  mcts.h
include/: alphabeta.hpp  arguments.h  arguments.hpp  audio.h  connect4.h  connect4.hpp  frameratecontroller.h  game.h  gameview.h  mcts.hpp
res/: CREDITS.txt
src/: audio.cpp  connect4.cpp  frameratecontroller.cpp  game.cpp  gameview.cpp  main.cpp
